--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,9 @@ section.timeline-card-content div.card-description > p {
   margin-top: 60px;
 }
 
+.h3--about {
+  color: #3D84C6;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
 
@@ -146,5 +149,6 @@ section.timeline-card-content div.card-description > p {
   font-size: 3em;
   font-weight: bold;
   margin-bottom: 25px;
+  color: #3D84C6;
 }
 
